Closed
Bug 1960501
Opened 9 days ago
Closed 8 days ago
Crash in [@ mozilla::LinkedListElement<T>::isInList] via WebTaskQueue::HasScheduledTasks()
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
139 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox137 | --- | unaffected |
firefox138 | --- | unaffected |
firefox139 | --- | fixed |
People
(Reporter: mccr8, Assigned: sefeng)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/44eba1f8-41ff-4ba7-9454-d272d0250414
Reason:
EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames:
0 xul.dll mozilla::LinkedListElement<RefPtr<mozilla::dom::WebTask> >::isInList() const mfbt/LinkedList.h:290
0 xul.dll mozilla::LinkedList<RefPtr<mozilla::dom::WebTask> >::isEmpty() const mfbt/LinkedList.h:570
0 xul.dll mozilla::dom::WebTaskQueue::HasScheduledTasks() const dom/webscheduling/WebTaskScheduler.h:236
0 xul.dll mozilla::dom::WebTaskScheduler::DispatchTask(mozilla::dom::WebTask*, mozilla:... dom/webscheduling/WebTaskScheduler.cpp:485
1 xul.dll mozilla::dom::DelayedWebTaskHandler::Call(char const*) dom/webscheduling/WebTaskScheduler.h:350
2 xul.dll nsGlobalWindowInner::RunTimeoutHandler(mozilla::dom::Timeout*) dom/base/nsGlobalWindowInner.cpp:6324
3 xul.dll mozilla::dom::TimeoutManager::RunTimeout(mozilla::TimeStamp const&, mozilla::... dom/base/TimeoutManager.cpp:944
3 xul.dll mozilla::dom::TimeoutExecutor::MaybeExecute() dom/base/TimeoutExecutor.cpp:179
4 xul.dll mozilla::dom::TimeoutExecutor::Run() dom/base/TimeoutExecutor.cpp:234
5 xul.dll mozilla::ThrottledEventQueue::Inner::ExecuteRunnable() xpcom/threads/ThrottledEventQueue.cpp:254
I found this via the crash spike reporter. Looks like a Nightly regression? Null deref in WebTaskScheduler code somewhere.
Flags: needinfo?(sefeng)
Assignee | ||
Comment 1•8 days ago
|
||
Looks like the taskqueue could be gone for delayed tasks, looking
Reporter | ||
Updated•8 days ago
|
status-firefox139:
--- → affected
Assignee | ||
Comment 2•8 days ago
|
||
I think this bug is about a case where the scheduler was CC'd,
and then the delayed tasks tried to run.
Updated•8 days ago
|
Assignee: nobody → sefeng
Status: NEW → ASSIGNED
Assignee | ||
Updated•8 days ago
|
Flags: needinfo?(sefeng)
Pushed by sefeng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f975d7f9d4b7
Do not try to run delayed web tasks when the scheduler is disconnected r=mccr8
Status: ASSIGNED → RESOLVED
Closed: 8 days ago
Resolution: --- → FIXED
Target Milestone: --- → 139 Branch
Updated•3 days ago
|
status-firefox137:
--- → unaffected
status-firefox138:
--- → unaffected
status-firefox-esr115:
--- → unaffected
status-firefox-esr128:
--- → unaffected
Regressed by: 1920115
You need to log in
before you can comment on or make changes to this bug.
Description
•