Bug 1960501 - Do not try to run delayed web tasks when the scheduler is disconnected r=mccr8

I think this bug is about a case where the scheduler was CC'd,
and then the delayed tasks tried to run.

Differential Revision: https://phabricator.services.mozilla.com/D245628